force-app/main/default/objects/custom_create322__c/custom_create322__c.object-meta.xml
<CustomObject>
    <label>Custom created object322</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects322</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>