force-app/main/default/objects/custom_create322__c/fields/custom_create_322field563__c.field-meta.xml
<CustomField>
    <fullName>custom_create_322field563__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 322field563</label>
    <type>Checkbox</type>
</CustomField>